--- a/.env
+++ b/.env
@@ -1,10 +1,22 @@
-DISCORD_TOKEN=your_discord_bot_token_here
+# Discord Bot Configuration
+DISCORD_TOKEN=your_token_here
 GROQ_API_KEY=your_groq_api_key_here
 
-# Logging Channels
-CH_SERVER_LOGS=1460868218670420009
-CH_STRIKES=1460868262932906080
-CH_BLACKLIST=1460868307602378814
-CH_BANNED_WORDS=1460868341345419275
-CH_ADMIN_LOGS=1460868388695052442
-CH_REPORTS=1460868441878691922
+# Bot Settings
+MODEL_NAME=meta-llama/llama-4-maverick-17b-128e-instruct
+
+# Owner Information
+OWNER_ID=1081876265683927080
+OWNER_NAME=Ψ.1nOnly.Ψ
+OWNER_BIO=Creator and maintainer of flexedAI Discord Bot
+
+# Logging Channel IDs
+LOG_CHANNEL_SERVER_JOIN_LEAVE=1460868218670420009
+LOG_CHANNEL_STRIKES=1460868262932906080
+LOG_CHANNEL_BLACKLIST=1460868307602378814
+LOG_CHANNEL_BANNED_WORDS=1460868341345419275
+LOG_CHANNEL_ADMIN_LOGS=1460868388695052442
+LOG_CHANNEL_REPORTS=1460868441878691922
+
+# Support Server
+SUPPORT_SERVER_INVITE=https://discord.com/invite/XMvPq7W5N4
