--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ GROQ_API_KEY=your_groq_api_key_here
 MODEL_NAME=meta-llama/llama-4-maverick-17b-128e-instruct
 BOT_NAME=flexedAI
 # Owner Information
-OWNER_ID=1081876265683927080
+OWNER_ID="1081876265683927080"
 OWNER_NAME=Ψ.1nOnly.Ψ
 OWNER_BIO=Creator and maintainer of flexedAI Discord Bot
 
