--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ LOG_CHANNEL_REPORTS=1460868441878691922
 
 # Support Server
 SUPPORT_SERVER_INVITE=https://discord.com/invite/XMvPq7W5N4
+
+TOPGG_WEBHOOK_SECRET=flexedAIissopro
+SUPPORT_SERVER_ID=1460574191072972913
