--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ LOG_CHANNEL_REPORTS=1460868441878691922
 SUPPORT_SERVER_INVITE=https://discord.com/invite/XMvPq7W5N4
 TOPGG_WEBHOOK_SECRET=flexedfr
 SUPPORT_SERVER_ID=1460574191072972913
+SUGGESTION_LOG_CHANNEL=1469007175283245098
+SUGGESTION_FORUM_CHANNEL=1460667778162884608
